--- a/GithubUsers/core/build.gradle
+++ b/GithubUsers/core/build.gradle
@@ -3,8 +3,9 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-}
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    testImplementation 'junit:junit:4.12'
+}
