--- a/GithubUsers/app/build.gradle
+++ b/GithubUsers/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    implementation project(":core")
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
