--- a/GithubUsers/app/build.gradle
+++ b/GithubUsers/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -50,9 +51,15 @@ dependencies {
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    //Recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:4.11.0"
 
     implementation project(":core")
 
@@ -62,6 +69,6 @@ dependencies {
     //Coroutine test
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
     //Live data test
-    testImplementation "androidx.arch.core:core-testing:2.0.1"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
 }
